--- a/src/wp-content/languages/themes/twentynineteen-de_DE_formal.po
+++ b/src/wp-content/languages/themes/twentynineteen-de_DE_formal.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Themes - Twenty Nineteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2019-01-20 10:03:05+0000\n"
+"PO-Revision-Date: 2019-04-13 19:47:38+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -138,80 +138,6 @@ msgstr "Footer"
 msgid "Primary Color"
 msgstr "Primäre Farbe"
 
-#: template-parts/content/content-none.php:39
-msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Es gibt keine passenden Suchergebnisse. Bitte versuchen Sie es mit anderen Suchbegriffen."
-
-#: template-parts/content/content-none.php:16
-msgid "Nothing Found"
-msgstr "Nichts gefunden"
-
-#. translators: 1: link to WP admin new post page.
-#: template-parts/content/content-none.php:26
-msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "Bereit, um Ihren ersten Beitrag zu veröffentlichen? <a href=\"%1$s\">Starten Sie hier</a>."
-
-#: comments.php:95
-msgid "Previous"
-msgstr "Zurück"
-
-#: comments.php:96
-msgid "Next"
-msgstr "Weiter"
-
-#: template-parts/content/content.php:49
-#: template-parts/content/content-page.php:27
-#: template-parts/content/content-single.php:40 image.php:52
-msgid "Pages:"
-msgstr "Seiten:"
-
-#: header.php:24
-msgid "Skip to content"
-msgstr "Zum Inhalt springen"
-
-#: template-parts/header/site-branding.php:46 functions.php:61
-msgid "Social Links Menu"
-msgstr "Social-Links-Menü"
-
-#: comments.php:116
-msgid "Comments are closed."
-msgstr "Kommentare sind geschlossen."
-
-#: 404.php:20
-msgid "Oops! That page can&rsquo;t be found."
-msgstr "Die Seite konnte leider nicht gefunden werden."
-
-#: 404.php:24
-msgid "It looks like nothing was found at this location. Maybe try a search?"
-msgstr "Wie es aussieht, wurde an dieser Stelle nichts gefunden. Möchten Sie eine Suche starten?"
-
-#: template-parts/content/content-none.php:46
-msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Es sieht so aus, als ob wir nicht das finden könnten, wonach Sie gesucht haben. Möglicherweise hilft eine Suche."
-
-#. translators: %s: Name of current post. Only visible to screen readers
-#: template-parts/content/content.php:36
-#: template-parts/content/content-single.php:27
-msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
-msgstr "<span class=\"screen-reader-text\">\"%s\"</span> weiterlesen"
-
-#. translators: used between list items, there is a space after the comma.
-#: inc/template-tags.php:86 inc/template-tags.php:98
-msgid ", "
-msgstr ", "
-
-#: single.php:41
-msgid "Previous Post"
-msgstr "Vorheriger Beitrag"
-
-#: single.php:38
-msgid "Next Post"
-msgstr "Nächster Beitrag"
-
-#: template-parts/header/site-branding.php:33
-msgid "Top Menu"
-msgstr "Oberes Menü"
-
 #: template-parts/post/discussion-meta.php:18
 msgid "No comments"
 msgstr "Keine Kommentare"
@@ -232,13 +158,54 @@ msgstr "Mehr Beiträge anzeigen"
 msgid "Published by %s"
 msgstr "Veröffentlicht von %s"
 
+#: template-parts/header/site-branding.php:33
+msgid "Top Menu"
+msgstr "Oberes Menü"
+
+#. translators: %s: Name of current post. Only visible to screen readers
+#: template-parts/content/content.php:36
+#: template-parts/content/content-single.php:27
+msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
+msgstr "<span class=\"screen-reader-text\">\"%s\"</span> weiterlesen"
+
+#: template-parts/content/content.php:49
+#: template-parts/content/content-page.php:27
+#: template-parts/content/content-single.php:40 image.php:52
+msgid "Pages:"
+msgstr "Seiten:"
+
+#: template-parts/content/content-none.php:46
+msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
+msgstr "Es sieht so aus, als ob wir nicht das finden könnten, wonach Sie gesucht haben. Möglicherweise hilft eine Suche."
+
+#: template-parts/content/content-none.php:39
+msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
+msgstr "Es gibt keine passenden Suchergebnisse. Bitte versuchen Sie es mit anderen Suchbegriffen."
+
+#. translators: 1: link to WP admin new post page.
+#: template-parts/content/content-none.php:26
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgstr "Bereit, um Ihren ersten Beitrag zu veröffentlichen? <a href=\"%1$s\">Starten Sie hier</a>."
+
+#: template-parts/content/content-none.php:16
+msgid "Nothing Found"
+msgstr "Nichts gefunden"
+
 #: single.php:42
 msgid "Previous post:"
 msgstr "Vorheriger Beitrag:"
 
+#: single.php:41
+msgid "Previous Post"
+msgstr "Vorheriger Beitrag"
+
 #: single.php:39
 msgid "Next post:"
 msgstr "Nächster Beitrag:"
+
+#: single.php:38
+msgid "Next Post"
+msgstr "Nächster Beitrag"
 
 #: search.php:22
 msgid "Search results for:"
@@ -259,6 +226,11 @@ msgstr "Schlagwörter:"
 #: inc/template-tags.php:92
 msgid "Posted in"
 msgstr "Veröffentlicht in"
+
+#. translators: used between list items, there is a space after the comma.
+#: inc/template-tags.php:86 inc/template-tags.php:98
+msgid ", "
+msgstr ", "
 
 #. translators: %s: Name of current post. Only visible to screen readers.
 #: inc/template-tags.php:63
@@ -323,6 +295,14 @@ msgstr "Kategorie-Archive:"
 msgid "Edit <span class=\"screen-reader-text\">%s</span>"
 msgstr "<span class=\"screen-reader-text\">%s</span> bearbeiten"
 
+#: header.php:24
+msgid "Skip to content"
+msgstr "Zum Inhalt springen"
+
+#: template-parts/header/site-branding.php:46 functions.php:61
+msgid "Social Links Menu"
+msgstr "Social-Links-Menü"
+
 #: functions.php:59 functions.php:150
 msgid "Primary"
 msgstr "Primär"
@@ -332,9 +312,35 @@ msgstr "Primär"
 msgid "Proudly powered by %s."
 msgstr "Stolz präsentiert von %s."
 
+#: comments.php:116
+msgid "Comments are closed."
+msgstr "Kommentare sind geschlossen."
+
+#: comments.php:96
+msgid "Next"
+msgstr "Weiter"
+
+#: comments.php:95
+msgid "Previous"
+msgstr "Zurück"
+
 #: comments.php:92 comments.php:95 comments.php:96
 msgid "Comments"
 msgstr "Kommentare"
+
+#. translators: 1: number of comments, 2: post title
+#: comments.php:44
+msgctxt "comments title"
+msgid "%1$s reply on &ldquo;%2$s&rdquo;"
+msgid_plural "%1$s replies on &ldquo;%2$s&rdquo;"
+msgstr[0] "%1$s Antwort auf &‌#8222;%2$s&‌#8220;"
+msgstr[1] "%1$s Antworten auf &‌#8222;%2$s&‌#8220;"
+
+#. translators: %s: post title
+#: comments.php:40
+msgctxt "comments title"
+msgid "One reply on &ldquo;%s&rdquo;"
+msgstr "Eine Antwort auf &‌#8222;%s&‌#8220;"
 
 #: comments.php:35 comments.php:105 comments.php:107
 msgid "Leave a comment"
@@ -361,29 +367,23 @@ msgstr "%1$s um %2$s"
 msgid "%s <span class=\"screen-reader-text says\">says:</span>"
 msgstr "%s <span class=\"screen-reader-text says\">sagt:</span>"
 
-#. translators: 1: number of comments, 2: post title
-#: comments.php:44
-msgctxt "comments title"
-msgid "%1$s reply on &ldquo;%2$s&rdquo;"
-msgid_plural "%1$s replies on &ldquo;%2$s&rdquo;"
-msgstr[0] "%1$s Antwort auf &‌#8222;%2$s&‌#8220;"
-msgstr[1] "%1$s Antworten auf &‌#8222;%2$s&‌#8220;"
+#: 404.php:24
+msgid "It looks like nothing was found at this location. Maybe try a search?"
+msgstr "Wie es aussieht, wurde an dieser Stelle nichts gefunden. Möchten Sie eine Suche starten?"
 
-#. translators: %s: post title
-#: comments.php:40
-msgctxt "comments title"
-msgid "One reply on &ldquo;%s&rdquo;"
-msgstr "Eine Antwort auf &‌#8222;%s&‌#8220;"
+#: 404.php:20
+msgid "Oops! That page can&rsquo;t be found."
+msgstr "Die Seite konnte leider nicht gefunden werden."
+
+#. Author of the theme
+msgid "the WordPress team"
+msgstr "Das WordPress-Team"
+
+#. Theme URI of the theme
+msgid "https://github.com/WordPress/twentynineteen"
+msgstr "https://github.com/WordPress/twentynineteen"
 
 #. Author URI of the theme
 #: footer.php:25
 msgid "https://wordpress.org/"
 msgstr "https://de.wordpress.org/"
-
-#. Author of the theme
-msgid "the WordPress team"
-msgstr "dem WordPress-Team"
-
-#. Theme URI of the theme
-msgid "https://github.com/WordPress/twentynineteen"
-msgstr "https://github.com/WordPress/twentynineteen"
